import("//build/config/features.gni")

source_set("importer") {
  sources = [
    "onevn_external_process_importer_client.cc",
    "onevn_external_process_importer_client.h",
    "onevn_external_process_importer_host.cc",
    "onevn_external_process_importer_host.h",
    "onevn_importer_lock_dialog.h",
    "onevn_in_process_importer_bridge.cc",
    "onevn_in_process_importer_bridge.h",
    "onevn_profile_writer.cc",
    "onevn_profile_writer.h",
    "onevn_profile_lock.cc",
    "onevn_profile_lock.h",
    "browser_profile_lock.h",
    "chrome_profile_lock.cc",
    "chrome_profile_lock.h",
  ]

  deps = [
    "//chrome/browser",
  ]
}
