import("//build/config/features.gni")

source_set("net") {
  configs += [ "//onevn/build/geolocation" ]
  sources = [
    "onevn_ad_block_tp_network_delegate_helper.cc",
    "onevn_ad_block_tp_network_delegate_helper.h",
    "onevn_common_static_redirect_network_delegate_helper.cc",
    "onevn_common_static_redirect_network_delegate_helper.h",
    "cookie_network_delegate_helper.cc",
    "cookie_network_delegate_helper.h",
    "onevn_httpse_network_delegate_helper.cc",
    "onevn_httpse_network_delegate_helper.h",
    "onevn_network_delegate_base.cc",
    "onevn_network_delegate_base.h",
    "onevn_profile_network_delegate.cc",
    "onevn_profile_network_delegate.h",
    "onevn_referrals_network_delegate_helper.cc",
    "onevn_referrals_network_delegate_helper.h",
    "onevn_site_hacks_network_delegate_helper.cc",
    "onevn_site_hacks_network_delegate_helper.h",
    "onevn_static_redirect_network_delegate_helper.cc",
    "onevn_static_redirect_network_delegate_helper.h",
    "onevn_system_network_delegate.cc",
    "onevn_system_network_delegate.h",
    "onevn_tor_network_delegate_helper.cc",
    "onevn_tor_network_delegate_helper.h",
    "onevn_translate_redirect_network_delegate_helper.cc",
    "onevn_translate_redirect_network_delegate_helper.h",
    "url_context.cc",
    "url_context.h",
  ]
  deps = [
    "//onevn/browser/safebrowsing",
    "//onevn/components/onevn_webtorrent/browser/net",
    "//chrome/browser",
    "//content/public/browser",
    "//content/public/common",
    "//extensions/common:common_constants",
    "//net",
  ]
}
