source_set("profiles") {
  sources = [
    "onevn_profile_manager.cc",
    "onevn_profile_manager.h",
  ]
  deps = [
    "//base",
    "//chrome/browser",
    "//chrome/common",
    "//content/public/common",
    "//onevn/browser/extensions",
    "//onevn/browser/tor",
    "//onevn/content:browser",
    "//onevn/common/tor",
    "//onevn/components/onevn_ads/browser",
    "//onevn/components/onevn_sync",
    "//onevn/components/onevn_rewards/browser",
    "//ui/base",
  ]
}
