import("//onevn/components/onevn_shields/browser/buildflags/buildflags.gni")

source_set("renderer_host") {
  sources = [
    "onevn_navigation_ui_data.cc",
    "onevn_navigation_ui_data.h",
  ]

  public_deps = [
    "//onevn/components/onevn_shields/browser/buildflags",
  ]

  if (onevn_stp_enabled) {
    sources += [
      "onevn_render_message_filter.cc",
      "onevn_render_message_filter.h",
    ]
  }

  deps = [
    "//onevn/browser/tor",
    "//chrome/browser",
  ]
}
