source_set("themes") {
  sources = [
    "onevn_theme_service.cc",
    "onevn_theme_service.h",
    "onevn_theme_service_win.cc",
    "onevn_theme_service_win.h",
    "onevn_theme_utils.h",
    "onevn_theme_utils_linux.cc",
    "onevn_theme_utils_mac.mm",
    "onevn_theme_utils_win.cc",
    "theme_properties.cc",
    "theme_properties.h",
  ]

  deps = [
    "//base",
    "//onevn/common",
    "//chrome/common",
    "//components/prefs",
    "//components/pref_registry",
    "//components/version_info",
    "//skia",
  ]
}
