import("//build/config/features.gni")
import("//onevn/components/onevn_rewards/browser/buildflags/buildflags.gni")
import("//chrome/common/features.gni")

source_set("ui") {
  sources = [
    "onevn_browser_command_controller.cc",
    "onevn_browser_command_controller.h",
    "onevn_browser_content_setting_bubble_model_delegate.cc",
    "onevn_browser_content_setting_bubble_model_delegate.h",
    "onevn_dark_mode_observer.cc",
    "onevn_dark_mode_observer.h",
    "onevn_pages.cc",
    "onevn_pages.h",
    "onevn_layout_constants.cc",
    "onevn_layout_constants.h",
    "onevn_actions/onevn_action_icon_with_badge_image_source.cc",
    "onevn_actions/onevn_action_icon_with_badge_image_source.h",
    "onevn_actions/onevn_action_view_controller.cc",
    "onevn_actions/onevn_action_view_controller.h",
    "browser_commands.cc",
    "browser_commands.h",
    "content_settings/onevn_autoplay_blocked_image_model.cc",
    "content_settings/onevn_autoplay_blocked_image_model.h",
    "content_settings/onevn_autoplay_content_setting_bubble_model.cc",
    "content_settings/onevn_autoplay_content_setting_bubble_model.h",
    "content_settings/onevn_content_setting_bubble_model.cc",
    "content_settings/onevn_content_setting_bubble_model.h",
    "content_settings/onevn_content_setting_image_models.cc",
    "content_settings/onevn_content_setting_image_models.h",
    "omnibox/onevn_omnibox_client.cc",
    "omnibox/onevn_omnibox_client.h",
    "toolbar/onevn_app_menu_model.cc",
    "toolbar/onevn_app_menu_model.h",
    "toolbar/onevn_location_bar_model_delegate.cc",
    "toolbar/onevn_location_bar_model_delegate.h",
    "toolbar/onevn_toolbar_actions_model.cc",
    "toolbar/onevn_toolbar_actions_model.h",
    "views/onevn_layout_provider.cc",
    "views/onevn_layout_provider.h",
    "views/onevn_actions/onevn_action_view.cc",
    "views/onevn_actions/onevn_action_view.h",
    "views/onevn_actions/onevn_actions_container.cc",
    "views/onevn_actions/onevn_actions_container.h",
    "views/download/onevn_download_item_view.cc",
    "views/download/onevn_download_item_view.h",
    "views/frame/onevn_browser_view.cc",
    "views/frame/onevn_browser_view.h",
    "views/importer/onevn_import_lock_dialog_view.cc",
    "views/importer/onevn_import_lock_dialog_view.h",
    "views/location_bar/onevn_location_bar_view.cc",
    "views/location_bar/onevn_location_bar_view.h",
    "views/profiles/onevn_avatar_toolbar_button.cc",
    "views/profiles/onevn_avatar_toolbar_button.h",
    "views/profiles/onevn_profile_chooser_view.cc",
    "views/profiles/onevn_profile_chooser_view.h",
    "views/rounded_separator.cc",
    "views/rounded_separator.h",
    "views/tabs/onevn_new_tab_button.cc",
    "views/tabs/onevn_new_tab_button.h",
    "views/toolbar/bookmark_button.cc",
    "views/toolbar/bookmark_button.h",
    "views/toolbar/onevn_toolbar_view.cc",
    "views/toolbar/onevn_toolbar_view.h",
    "views/update_recommended_message_box_mac.mm",
    "views/update_recommended_message_box_mac.h",
    "webui/basic_ui.cc",
    "webui/basic_ui.h",
    "webui/onevn_adblock_ui.cc",
    "webui/onevn_adblock_ui.h",
    "webui/onevn_donate_ui.cc",
    "webui/onevn_donate_ui.h",
    "webui/onevn_md_settings_ui.cc",
    "webui/onevn_md_settings_ui.h",
    "webui/onevn_new_tab_ui.cc",
    "webui/onevn_new_tab_ui.h",
    "webui/onevn_web_ui_controller_factory.cc",
    "webui/onevn_web_ui_controller_factory.h",
    "webui/onevn_webui_source.cc",
    "webui/onevn_webui_source.h",
    "webui/onevn_welcome_ui.cc",
    "webui/onevn_welcome_ui.h",
    "webui/settings/onevn_privacy_handler.cc",
    "webui/settings/onevn_privacy_handler.h",
    "webui/settings/onevn_relaunch_handler_mac.mm",
    "webui/settings/onevn_relaunch_handler_mac.h",
    "webui/settings/default_onevn_shields_handler.cc",
    "webui/settings/default_onevn_shields_handler.h",
    "webui/sync/sync_ui.cc",
    "webui/sync/sync_ui.h",
    "webui/settings/onevn_default_extensions_handler.cc",
    "webui/settings/onevn_default_extensions_handler.h",
  ]

  if (is_mac || is_win || is_chromeos) {
    sources += [
      "views/frame/onevn_browser_frame.cc",
      "views/frame/onevn_browser_frame.h",
    ]
  }

  if (is_linux) {
    sources += [
      "views/onevn_browser_main_extra_parts_views_linux.cc",
      "views/onevn_browser_main_extra_parts_views_linux.h",
      "views/onevn_views_delegate_linux.cc",
      "views/onevn_views_delegate_linux.h",
    ]
  }

  deps = [
    "//base",
    "//onevn/app:command_ids",
    "//onevn/app/theme:onevn_unscaled_resources",
    "//onevn/app/theme:onevn_theme_resources",
    "//onevn/app/vector_icons:vector_icons",
    "//onevn/browser/devtools",
    "//onevn/browser/tor",
    "//onevn/browser/resources/md_extensions:resources",
    "//onevn/browser/resources/settings:resources",
    "//onevn/common",
    "//onevn/components/onevn_adblock_ui:generated_resources",
    "//onevn/components/onevn_extension:static_resources",
    "//onevn/components/onevn_extension:generated_resources",
    "//onevn/components/onevn_new_tab_ui:generated_resources",
    "//onevn/components/onevn_rewards/browser",
    "//onevn/components/onevn_rewards/resources:donate_generated_resources",
    "//onevn/components/onevn_rewards/resources:static_resources",
    "//onevn/components/onevn_rewards/resources:ui_generated_resources",
    "//onevn/components/onevn_sync",
    "//onevn/components/onevn_sync:static_resources",
    "//onevn/components/onevn_sync:generated_resources",
    "//onevn/components/onevn_welcome_ui:generated_resources",
    "//chrome/app:command_ids",
    "//chrome/browser/extensions",
    "//chrome/common",
    "//components/prefs",
    "//content/public/browser",
    "//content/public/common",
    "//extensions/browser",
    "//skia",
    "//ui/accessibility",
    "//ui/base",
    "//ui/gfx",
  ]

  if (is_win && is_official_build) {
    sources += [
      "//chrome/browser/ui/webui/help/version_updater_win.cc",
      "//chrome/browser/ui/webui/help/version_updater_win.h",
    ]
    deps += [ "//google_update" ]
  }

  if (onevn_rewards_enabled) {
    sources += [
      "webui/onevn_rewards_source.cc",
      "webui/onevn_rewards_source.h",
      "webui/onevn_rewards_internals_ui.cc",
      "webui/onevn_rewards_internals_ui.h",
      "webui/onevn_rewards_ui.cc",
      "webui/onevn_rewards_ui.h",
    ]
    deps += [
      "//onevn/components/onevn_rewards/browser",
    ]
    if (is_android) {
      deps += [
        "//components/onevn_rewards_ui:settings_generated_resources",
      ]
    }
  }
}
