import("//onevn/components/common/typescript.gni")

transpile_web_ui("onevn_adblock_ui") {
  inputs = [
    "onevn_adblock.html",
    "onevn_adblock.tsx",
    "storage.ts",
    "store.ts",
    "actions/adblock_actions.ts",
    "components/adBlockItem.tsx",
    "components/adBlockItemList.tsx",
    "components/app.tsx",
    "components/customFilters.tsx",
    "components/numBlockedStat.tsx",
    "constants/adblock_types.ts",
    "reducers/adblock_reducer.ts",
  ]

  entry_points = [
    ["onevn_adblock", rebase_path("onevn_adblock.tsx")]
  ]

  resource_name = "onevn_adblock"
}

pack_web_resources("generated_resources") {
  resource_name = "onevn_adblock"
  output_dir = "$root_gen_dir/onevn/components/onevn_adblock/resources"
  deps = [
    ":onevn_adblock_ui"
  ]
}
