import("//onevn/components/common/typescript.gni")
import("//build/config/features.gni")
import("//extensions/buildflags/buildflags.gni")
import("//tools/grit/grit_rule.gni")
import("//tools/grit/repack.gni")

pack_web_resources("generated_resources") {
  resource_name = "onevn_extension"
  output_dir = "$root_gen_dir/onevn/components/onevn_extension"
  # need wepack and GRD generation first
  deps = [
    "extension/onevn_extension"
  ]
}

grit("static_resources") {
  source = "extension/resources.grd"

  grit_flags = [
    "-E",
    "root_gen_dir=" + rebase_path(root_gen_dir, root_build_dir),
  ]

  outputs = [
    "grit/onevn_extension.h",
    "grit/onevn_extension_resources_map.cc",
    "grit/onevn_extension_resources_map.h",
    "onevn_extension_static.pak",
  ]

  deps = [
    "extension/onevn_extension",
  ]

  resource_ids = "//onevn/browser/resources/resource_ids"
  output_dir = "$root_gen_dir/onevn/components/onevn_extension"
}

repack("resources") {
  deps = [
    ":static_resources",
    ":generated_resources",
  ]

  sources = [
    "$root_gen_dir/onevn/components/onevn_extension/onevn_extension_static.pak",
    "$root_gen_dir/onevn/components/onevn_extension/onevn_extension_generated.pak",
  ]

  output = "$root_gen_dir/onevn/components/onevn_extension/onevn_extension_resources.pak"
}
