import("//onevn/components/common/typescript.gni")
import("//tools/grit/grit_rule.gni")
import("//tools/grit/repack.gni")

grit("static_resources") {
  source = "resources.grd"
  outputs = [
    "grit/onevn_webtorrent_resources_map.cc",
    "grit/onevn_webtorrent_resources_map.h",
    "grit/onevn_webtorrent_resources.h",
    "onevn_webtorrent_static.pak",
  ]

  deps = [ ]

  resource_ids = ""
}

pack_web_resources("generated_resources") {
  resource_name = "onevn_webtorrent"
  output_dir = "$root_gen_dir/onevn/components/onevn_webtorrent"
  # Need wepack and GRD generation first
  deps = [
    "extension:generate_onevn_webtorrent"
  ]
}

repack("resources") {
  deps = [
    ":static_resources",
    ":generated_resources",
  ]
  sources = [
    "$root_gen_dir/onevn/components/onevn_webtorrent/onevn_webtorrent_static.pak",
    "$root_gen_dir/onevn/components/onevn_webtorrent/onevn_webtorrent_generated.pak",
  ]
  # This output repacked by onevn_paks.gni
  output = "$root_gen_dir/onevn/components/onevn_webtorrent/onevn_webtorrent_resources.pak"
}
