# Per-profile services.
source_set("onevn_content_browser_overlay_manifest") {
  sources = [
    "onevn_content_browser_overlay_manifest.cc",
    "onevn_content_browser_overlay_manifest.h",
  ]

  deps = [
    "//base",
    "//onevn/components/services/bat_ads/public/cpp:manifest",
    "//onevn/components/services/bat_ledger/public/cpp:manifest",
    "//services/service_manager/public/cpp",
  ]

  if (!is_android) {
    deps += [
      "//onevn/utility/tor/public/cpp:manifest",
    ]
  }
}

source_set("onevn_content_packaged_service_overlay_manifest") {
  sources = [
    "onevn_content_packaged_service_overlay_manifest.cc",
    "onevn_content_packaged_service_overlay_manifest.h",
  ]

  deps = [
    "//base",
    "//onevn/components/services/bat_ads/public/cpp:manifest",
    "//onevn/components/services/bat_ledger/public/cpp:manifest",
    "//services/service_manager/public/cpp",
  ]

  if (!is_android) {
    deps += [
      "//onevn/utility/tor/public/cpp:manifest",
    ]
  }
}

group("onevn_content_manifest_overlays") {
  deps = [
    ":onevn_content_browser_overlay_manifest",
    ":onevn_content_packaged_service_overlay_manifest",
  ]
}
