source_set("renderer") {
  visibility = [ "//extensions/renderer" ]

  sources = [
    "onevn_native_extension_bindings_system.cc",
    "onevn_native_extension_bindings_system.h",
    "onevn_shields_content_setting.cc",
    "onevn_shields_content_setting.h",
  ]

  deps = [
    "//base",
    "//extensions/common",
    "//extensions/common/api",
    "//gin",
  ]
}
